trunk/Archive2/a0/5d8b68cde4f228/output
main.cpp:17:11: error: no member named 'g' in 'base'
    x.f().g();
    ~~~~~ ^
1 error generated.
