trunk/Archive2/a0/5d8b68cde4f228/main.cpp
#include <cstdio>

struct base {
    base& f() {
        return *this;
    }
};

struct derived : base {
    derived& g() {
        return *this;
    }
};

int main() {
    derived x;
    x.f().g();
}